--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>Love DevPilot</title>
+    <title>情人节快乐</title>
     <style>
         body {
             margin: 0;
@@ -38,7 +38,7 @@
 <body>
 <canvas id="pinkboard"></canvas>
 <canvas id="textCanvas"></canvas>
-<div id="name">Love DevPilot</div>
+<div id="name">情人节快乐</div>
 
 <script>
     "use strict";
@@ -49,7 +49,7 @@
         "#9400D3", "#FF00FF", "#FFA07A", "#20B2AA"
     ];
 
-    const messages = ["Love", "Forever"];
+    const messages = ["星河璀璨不及你眼中光", "四季轮回唯爱你这一章"];
 
     class Heart {
         constructor(x, y, size) {
